--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
@@ -51,7 +52,7 @@
     "smooth-scrollbar-react": "^2.4.1",
     "stylis-plugin-rtl": "^2.1.1",
     "ts-node": "^10.9.2",
-    "yup": "^1.3.2",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
